Clear "canceled at" timestamp when setting a new subscrition ID